--- a/VRChat/99/1145899.html
+++ b/VRChat/99/1145899.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "uOnruH3iT4kbuqBuUqSJDL0oT2SqLBz3BttnQ1Y72u8="></script>
+    "qN/YJE1JdJgeUzCRajNxtB5JV4Jq9P+6GG/78b+Y9Hk="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【オリジナル3Dモデル】セフィ 〈Sephir〉.ver3.6.3ｗ","description":"スチームパンクな雰囲気のアバターです。\nHumanoidリグ、ダイナミックボーン、シェーダーが設定されています。フルトラにも対応している……はずです。\nVRChatでの使用を想定していますが、他の媒体で使用しても構いません。使用の際の連絡は不要ですが、あると製作者が喜びます。\n\n服だけが欲しい方はリンク先からどうぞ。\n\n略式制服\nhttps://sephir.booth.pm/items/2745835\n\n探索者の外出着\nhttps://sephir.booth.pm/items/2746386\n\nReadmeや規約をアップロードしてあります。改変で困った際などにご活用ください。\nhttps://drive.google.com/drive/folders/1FrgSZWMIGClWXl4hCuwXUkaaNgQvQLFz?usp=sharing\n\nモデルの再配布は厳禁です。VRChatでパブリック化するのもお控えください。\n\n2021/02/16\nアプデしました。\nEFBodyに対応し、様々な変化がありました。ご確認ください。\n","url":"https://booth.pm/ja/items/1145899","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"2500","highPrice":"5000"},"image":"https://booth.pximg.net/c/620x620/0d2468c0-1ae0-44e4-9281-c6f1646d3f41/i/1145899/a61e8321-8a12-4e74-ab6a-cd36efde1051_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="uOnruH3iT4kbuqBuUqSJDL0oT2SqLBz3BttnQ1Y72u8="></script>
+    nonce="qN/YJE1JdJgeUzCRajNxtB5JV4Jq9P+6GG/78b+Y9Hk="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -624,9 +624,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
