--- a/VRChat/31/1145831.html
+++ b/VRChat/31/1145831.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "ewgcML077xT21vEF8pfOyOdeI1OV24O0HkJyk+8uczw="></script>
+    "lCZN9nU+cTj0CuSeodAstgE8jrieG94q6v1h+xMVBlE="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"シャンプーハット（無料配布あり）","description":"『シャンプーハット』\n\nVRchat用ですが特に用途の制限はないので\n下記を参考にご自由にお使いください。\n\n温泉とかで使う。\n\n\tNormal.png : ノーマルマップです。ノーマルマップに対応したシェーダーに入れると質感が出ます。\n\tMetallicSmoothness.png : メタリックラフネスマップです。メタリックラフネスマップに対応したシェーダーに入れると質感が出ます。\n\n作者詐称：不可\n改変：可\n商用利用；可\n再配布：不可\nアバターやワールドへの同梱：可\n\n----------------------\n\n更新履歴\n\n2018/12/22 リリース\n\n----------------------\n\n作成・配布者　siodome0","url":"https://booth.pm/ja/items/1145831","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/55d0b3cd-8d44-43f0-8467-7e99fcc0d318/i/1145831/ce19c581-0721-43ed-981f-0348c4f410a5_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="ewgcML077xT21vEF8pfOyOdeI1OV24O0HkJyk+8uczw="></script>
+    nonce="lCZN9nU+cTj0CuSeodAstgE8jrieG94q6v1h+xMVBlE="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -447,9 +447,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
