--- a/VRChat/76/1141976.html
+++ b/VRChat/76/1141976.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "GbAp/AFo8aC5BeRuAPFXB4Dmo9yKXaIUpMVKwls9XDk="></script>
+    "04PxfbINWv33XUmsDo8g291ZuH2KhShrifrpnpDE58U="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"兎鞠まり 同人3Dモデル","description":"※利用規約へ同意の上でのご購入をよろしくお願いします\n\n\nVTuber、兎鞠まりちゃんの同人3Dモデルです\nやったでおーい！！( •̀ .̫ •́ )✧ \n\nVRChat、clusterにすぐにアップロードできるように調整してあります!\n\nまた、Blenderファイルを梱包しているので、様々な用途にご利用いただけます\n\n内容物\n・Unitypackageファイル(VRChat向け)\n・VRMファイル(cluster向け)\n・Blenderファイル\n・取り扱い説明書\n\nVRM版はニコニ立体にてご覧いただけます\nhttps://3d.nicovideo.jp/works/td49382\n\n\nシェーダーにsynqark様のArktoon-Shadersを使用させていただいています\nhttps://packetbird.booth.pm/items/1027997","url":"https://booth.pm/ja/items/1141976","offers":{"priceCurrency":"JPY","@type":"Offer","price":"2000"},"image":"https://booth.pximg.net/c/620x620/96e607b6-d0b4-45be-93a9-04c0ca140e9c/i/1141976/a5a9b479-fdf4-481a-ad11-d4eaf13021e5_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="GbAp/AFo8aC5BeRuAPFXB4Dmo9yKXaIUpMVKwls9XDk="></script>
+    nonce="04PxfbINWv33XUmsDo8g291ZuH2KhShrifrpnpDE58U="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -477,9 +477,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
