--- a/VRChat/04/1144704.html
+++ b/VRChat/04/1144704.html
@@ -81,7 +81,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "VsmRxe+Pq33zt9CmB9LBbldX3pB0V7CXHq/3kLZdFYI="></script>
+    "aI8H5vSK4VQ/sDQnKay/E00PZATwMOxQKT9s/ynN91M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"「お前が好きなあの子と恋ができるゲーム」","description":"一言で表すなら、RPGツクールのVRカノジョ版です\n\n無料でダウンロードできる上に、画像付きの説明書がついてあるので、\n取り敢えず見て頂ければなと\n\nそれと、VRChatを使用するので、アカウントの作成をお願いします。\n\n有料版と無料版で違いはありません","url":"https://booth.pm/ja/items/1144704","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"500"},"image":"https://booth.pximg.net/c/620x620/b3cb2a40-882b-4acf-a108-b51fb559b399/i/1144704/3e645dfd-bba5-4a72-808d-6446e4a40c80_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="VsmRxe+Pq33zt9CmB9LBbldX3pB0V7CXHq/3kLZdFYI="></script>
+    nonce="aI8H5vSK4VQ/sDQnKay/E00PZATwMOxQKT9s/ynN91M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -419,9 +419,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
