--- a/VRChat/61/1144361.html
+++ b/VRChat/61/1144361.html
@@ -106,7 +106,7 @@
     <script src=
     "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
     "defer" nonce=
-    "JOlpnYvUP3VoFYPOsXLAztrnYGQ9KdixVcd3JDUUrI8="></script>
+    "ilUSeYMRd/W45oe3KSuqfq41aw0LopiKo2HhDPULu0M="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ベル付きチョーカー.unitypackage","description":"※2018/12/22 20：20　ベルのみのFBXのメッシュの乱れを修正\n\n商品画像がやっつけなことでおなじみのぽぴぞん新作は、遅すぎたクリスマスっぽいアクセサリー\n「ベル付きチョーカー.unitypackage」(たぶん1768ポリゴン)\nです。\n\n-商品説明-\n\nVRChatでの使用を想定した、クリスマスっぽい首輪のアクセサリーです。\n\nUnitypackageをぶちこむだけで使えるようになっているはずですが、standerdシェーダーで設定してあるため「シェーダーの変更を推奨」します。(裏面描画のあるシェーダーだとなおよし)\n\nシェイプキーによって首輪部分の形やベルのサイズなどをある程度調整することができます。\n\n改変用のテクスチャセットやfbx、ベル部分のみのfbxも付属しているため、ヘアアクセサリーとしての使用なども可能です。\n\n\n-利用規約-\n商用非商用を問わず自由にお使いいただけます。\n\n単体での再配布は禁止します。\nアバターペデスタルでの利用や、アバターに組み込む形で譲渡することを許可します。\n\n\n不明な点や、何か不備等ありましたらお手数ですが作者のTwitter(@popico_VT)までご一報下さい。","url":"https://booth.pm/ja/items/1144361","offers":{"priceCurrency":"JPY","@type":"Offer","price":"100"},"image":"https://booth.pximg.net/c/620x620/13e72562-5481-4676-9ce5-6a97e2f60d62/i/1144361/b7449b87-56f4-4238-9b97-9fde950d0b19_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="JOlpnYvUP3VoFYPOsXLAztrnYGQ9KdixVcd3JDUUrI8="></script>
+    nonce="ilUSeYMRd/W45oe3KSuqfq41aw0LopiKo2HhDPULu0M="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -434,9 +434,10 @@
     <footer class="footer__menu bg-white">
       <div class=
       "desktop:flex desktop:justify-between desktop:mx-auto desktop:text-center desktop:max-w-[1224px] desktop:my-24 desktop:px-16 mobile:gap-16 mobile:grid mobile:grid-cols-2 mobile:m-16">
-        <a href=
-        "https://booth.pm/anshin_booth_pack_guides"><img srcset=
-        "https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
+        <a href="https://booth.fanbox.cc/posts/6374573"><img alt=
+        "ピクシブかんたん決済のご利用方法" class="align-bottom w-full" width="176"
+        height="72" src=
+        "https://asset.booth.pm/assets/banner-minna_no_ginko_footer-558af5dbd3da52c330c9263a270923d2f773e612606d9c248942b779c9ed541a.jpg"></a><a href="https://booth.pm/anshin_booth_pack_guides"><img srcset="https://asset.booth.pm/assets/banner-anshin_booth_pack@2x-fcabcd0e43382f4dc4a297dd15a695c9a7041541c945b15d5d8da6315952095a.png 2x"
         alt="匿名配送であんしん！あんしんBOOTH便" class="align-bottom w-full"
         width="176" height="72" src=
         "https://asset.booth.pm/assets/banner-anshin_booth_pack-14540be4805dc22307b8c1341662093cca5d0f3d885daf80a896ca7c32e0596f.png"></a><a target="_blank"
